--- a/.jslintrc
+++ b/.jslintrc
@@ -1,7 +1,7 @@
 {
     "predef": [
         "module", "console", "document", "window", "XMLHttpRequest", "$", "WebSocket", "Promise",
-        "setInterval",
+        "setInterval", "clearInterval",
         "Board", "Main", "Api", "Unit", "Chat"
     ],
     "es5": true
