Refactoring board.js into Renderer

--- a/.jslintrc
+++ b/.jslintrc
@@ -2,8 +2,8 @@
     "predef": [
         "module", "console", "document", "window", "XMLHttpRequest", "$", "WebSocket", "Promise",
         "setInterval", "clearInterval",
-        "Board", "Main", "Api", "Unit", "Chat", "Status", "Util", "Jsonrpc",
-        "Engine"
+        "Board", "Square", "Overlay", "Engine",
+        "Main", "Api", "Unit", "Chat", "Status", "Util", "Jsonrpc"
     ],
     "es5": true
 }
